--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/mmi-admin-dashboard-server"
+    "start": "node ./bin/mmi-admin-dashboard-server",
+    "dev": "DEBUG=mmi-admin-dashboard:* node ./bin/mmi-admin-dashboard-server"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
