--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "exceljs": "^4.1.1",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "franc": "^5.0.0",
@@ -16,6 +17,7 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "tempfile": "^3.0.0"
   }
 }
